--- a/assets/styles.css
+++ b/assets/styles.css
@@ -67,27 +67,30 @@ h6 {
     text-align: center;
 }
 
+
+/* Utilizamos position relative en .container(padre) y position absolute en .widgets-container(hijo) para que este se posicione respecto a su padre, le damos un top para que esté como superpuesto */
+
 .container {
     position: relative;
+}
+
+.dashboard-title-items {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    padding: 40px 15%;
+    height: 250px;
+    width: 100%;
+    background-color: var(--very-pale-blue);
 }
 
 .widgets-container {
     width: 100%;
     position: absolute;
-    top: 125px;
+    top: 150px;
 }
 
 
 /* PARTE DE ARRIBA */
-
-.dashboard-title-items {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    padding: 20px 25%;
-    height: 250px;
-    width: 100%;
-    background-color: var(--very-pale-blue);
-}
 
 .tittle-items {
     font-weight: var(--normal-weight);
@@ -95,43 +98,99 @@ h6 {
 }
 
 .tittle-followers {
+    position: absolute;
+    bottom: 140px;
     font-size: 15px;
-    font-weight: var(--little-weight);
+    font-weight: var(--normal-weight);
+    color: var(--dark-graylish-blue);
 }
+
+.hr-top {
+    margin-top: 10px;
+    margin-bottom: -18px;
+    width: 100%;
+    height: 2px;
+    background-color: var(--desaturated-blue);
+}
+
+
+/* Botón (copy-paste) */
 
 .button-text {
     text-align: end;
 }
 
 .button-name {
+    font-weight: var(--normal-weight);
+    font-size: 15px;
+    color: var(--desaturated-blue);
     display: inline-flex;
 }
 
-.button {
-    background-color: #44c767;
-    border-radius: 28px;
-    border: 1px solid #18ab29;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial;
-    font-size: 17px;
-    padding: 16px 31px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #2f6627;
-}
-
-.button:hover {
-    background-color: #5cbf2a;
-}
-
-.button:active {
+.switch {
     position: relative;
-    top: 1px;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: '';
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+input:checked+.slider {
+    background-image: radial-gradient( ellipse farthest-corner at 18% 133%, hsl(210, 78%, 56%) 0%, hsl(146, 68%, 55%) 102%);
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+
+/* Rounded sliders */
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
 
 .card {
-    width: 50%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
     display: grid;
@@ -172,14 +231,13 @@ h6 {
 
 .card-description {
     font-weight: var(--little-weight);
-    color: var(--dark-graylish-blue);
+    color: var(--desaturated-blue);
     letter-spacing: 5px;
     margin-top: -46px;
 }
 
 .card-user {
     color: var(--dark-graylish-blue);
-    margin-bottom: -18px;
     font-size: 14px;
 }
 
@@ -239,22 +297,15 @@ h6 {
 /* PARTE DE ABAJO */
 
 .footer-card-name {
-    width: 50%;
+    width: 70%;
     margin: 20px auto 0 auto;
     color: var(--dark-graylish-blue);
     font-size: 15px;
 }
 
-@media screen and (max-width: 375px) {
-    .footer-card-name,
-    .tittle-items {
-        font-size: 10px;
-    }
-}
-
 .card-footer {
     display: grid;
-    width: 50%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -303,6 +354,7 @@ h6 {
 
 .card-icon-name {
     display: inline-flex;
+    margin-top: 30px;
 }
 
 .icon-top {
@@ -312,8 +364,35 @@ h6 {
 
 /* Bottom */
 
+
+/* Utilizamos display flex en el padre de los elementos para darle un justify-content: space-between para que se genere un espacio entre ellos y que cada uno se vaya a la esquina de su contenedor */
+
 .card-icon-title {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+
+/* Mediaquerys */
+
+@media screen and (min-width: 376px) {
+    .hr-top {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .footer-card-name,
+    .tittle-items {
+        font-size: 14px;
+    }
+    .button-items {
+        display: flex;
+        justify-items: center;
+        justify-content: space-between;
+    }
+    .widgets-container {
+        top: 200px;
+    }
 }
