--- a/assets/styles.css
+++ b/assets/styles.css
@@ -373,6 +373,11 @@ input:checked+.slider:before {
     justify-content: space-between;
 }
 
+.attribution {
+    position: absolute;
+    top: 100%;
+}
+
 
 /* Mediaquerys */
 
